services/landing-page/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  labels:
    app: landing-page
spec:
  selector:
    app: landing-page
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
